# agent-lsp

./: .dockerignore  .env.example  .gitignore  .goreleaser.yaml  .goreleaser.yml  .saw-agent-brief.md  .saw-worktree-env  CHANGELOG.md  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.full  Dockerfile.lang  Makefile  README.md  ROADMAP.md  docker-compose.yml  glama.json  go.mod  go.sum  install.ps1  install.sh  integration_test.go  mkdocs.yml  saw.config.json  server.json  smithery.yaml  token-savings
.gemini/: settings.json
.saw-state/: active-impl  gate-cache.json
.serena/: project.yml
assets/: architecture.drawio  download-stats.cache  downloads-badge.json
bucket/: agent-lsp.json
docker/: Dockerfile  Dockerfile.combo  Dockerfile.full  Dockerfile.lang  Dockerfile.release  docker-compose.yml  entrypoint.sh  lsp-servers.yaml
docs/: CNAME  CONTEXT.md  FEATURES.md  REQUIREMENTS.md  agent-evaluations.md  architecture.drawio  architecture.md  changelog.md  ci-notes.md  distribution.md  ide-integration-plan.md  index.md  language-support.md  lsp-conformance.md  lsp-spec-compliance.md  parity-inspection.md  phase-enforcement.md  refactor-preview.md  roadmap.md  skill-coverage-audit.md  skills.md  speculative-execution.md  token-savings.md  tools.md
inspections/: lsp-mcp-go-audit-6.md  lsp-mcp-go-audit-7.md  lsp-mcp-go-audit.md
pypi/: README.md  pyproject.toml
pypi/agent_lsp/: __init__.py  __main__.py
scripts/: download-stats.sh  gcf-benchmark.go  npm-publish.sh  pypi-build-wheels.sh  pypi-publish.sh
skills/: PATTERNS.md  install.sh  lsp-edit-export.md  (+4 more)
(+511 files in other folders)
